T002: Modal de conclusao de nivel

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <title>GeoExplorer Engine</title>
     <link rel="stylesheet" href="style.css" />
     <link
@@ -125,7 +131,6 @@
     <script src="engine/HotspotController.js"></script>
     <script src="engine/UIController.js"></script>
     <script src="engine/EventController.js"></script>
-    <!-- NOVO: ADICIONE AQUI! -->
     <script src="main.js"></script>
   </body>
 </html>
